force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_AgreedSettlementAmount__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AgreedSettlementAmount__c</fullName>
    <label>Agreed Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>