force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_InvoicedOutcome__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoicedOutcome__c</fullName>
    <label>Invoice Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issued</fullName>
                <default>true</default>
                <label>Issued</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Redirected</fullName>
            </value>
            <value>
                <fullName>Re-issued</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Negotiated Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>