force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>