force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_InvoiceValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InvoiceValue__c</fullName>
    <label>Invoice Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>