force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_NegotiatedSettlementReason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NegotiatedSettlementReason__c</fullName>
    <label>Negotiated Settlement reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request from District</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Lack of Photographs/Information</fullName>
            </value>
            <value>
                <fullName>Overhead/Salary Costs</fullName>
            </value>
            <value>
                <fullName>Partial Liability</fullName>
            </value>
            <value>
                <fullName>Best Return Received Through Negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>