force-app/main/default/objects/SPEN_Invoice__c/fields/SPEN_Open__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Open__c</fullName>
    <description>Formula field to find out an invoice in open status or not to be shown on Validation rule on CASE closure.</description>
    <formula>IF(ISPICKVAL(SPEN_InvoicedOutcome__c, &apos;Issued&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open</label>
    <type>Checkbox</type>
</CustomField>