force-app/main/default/objects/SPEN_Invoice__c/recordTypes/SPEN_ThirdPartyDamage.recordType-meta.xml
<RecordType>
    <fullName>SPEN_ThirdPartyDamage</fullName>
    <active>true</active>
    <description>Record type for the Third Party Damage type invoices related to Third party damage cases</description>
    <label>Third Party Damage</label>
</RecordType>