force-app/main/default/objects/SPEN_Invoice__c/validationRules/SPEN_BlockInvoiceCreationOnClosedCases.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_BlockInvoiceCreationOnClosedCases</fullName>
    <active>true</active>
    <description>Validation to block invoice creation on closed cases.</description>
    <errorConditionFormula>ISPICKVAL(SPEN_Case__r.Status, &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>Invoice cannot be created on a closed case. Please reopen the case in order to create Invoice.</errorMessage>
</ValidationRule>