force-app/main/default/objects/SPEN_Invoice__c/validationRules/SPEN_MandatoryFieldsForNegotiatedOutcome.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_MandatoryFieldsForNegotiatedOutcome</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(SPEN_InvoicedOutcome__c, &apos;Negotiated Settlement&apos;),
OR(ISBLANK(TEXT(SPEN_NegotiatedSettlementReason__c)),
ISBLANK(SPEN_AgreedSettlementAmount__c)))</errorConditionFormula>
    <errorMessage>It is mandatory to fill Negotiated Settlement Reason and Agreed Settlement Amount for Negotiated Settlement outcome.</errorMessage>
</ValidationRule>